cmake_minimum_required( VERSION 3.8 )

PROJECT(TEST)
SET(SRC_LIST main.cpp)
MESSAGE(STATUS "This is BINARY dir " ${TEST_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${TEST_SOURCE_DIR})

INCLUDE_DIRECTORIES(/home/yanfa-1/eosio/2.0/src/boost_1_71_0/include/)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")

ADD_EXECUTABLE(test ${SRC_LIST})